--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,8 @@ RewriteEngine On
 RewriteRule ^produits/?$ produits.php [NC,L]
 RewriteRule ^[^/]+/(\d+)$ produits.php?id=$1
 
+<LimitExcept GET POST PUT>
+    Require all granted
+</LimitExcept>
+
+
