--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,15 @@
 RewriteEngine On 
-RewriteRule ^produits/?$ produits.php [NC,L]
-RewriteRule ^[^/]+/(\d+)$ produits.php?id=$1
 
-<LimitExcept GET POST PUT>
-    Require all granted
-</LimitExcept>
+# Règle pour la page produits
+RewriteRule ^produits/?$ produits.php [NC,L]
+# RewriteRule ^produits/(\d+)$ produits.php?id=$1 [NC,L]
+RewriteRule ^produits/([^/]+)$ produits.php?id=$1 [NC,L]
+
+
+# Règle pour la page catégorie
+RewriteRule ^categorie/?$ categorie.php [NC,L]
+RewriteRule ^categorie/(\d+)$ categorie.php?id=$1 [NC,L]
+
+
 
 
